--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,4 +1,15 @@
 apply plugin: "com.android.application"
+
+project.ext.envConfigFiles = [
+    productiondebug: ".env.prod",
+    productionrelease: ".env.prod",
+    developmentrelease: ".env.dev",
+    developmentdebug: ".env.dev",
+    stagingrelease: ".env.staging",
+    stagingdebug: ".env.staging"
+]
+
+apply from: project(':react-native-config').projectDir.getPath() + "/dotenv.gradle"
 apply plugin: 'com.google.gms.google-services'
 apply plugin: "com.facebook.react"
 
@@ -69,10 +80,42 @@ def enableProguardInReleaseBuilds = false
  */
 def jscFlavor = 'org.webkit:android-jsc:+'
 
+// android {
+//     compileSdkVersion rootProject.ext.compileSdkVersion
+//     flavorDimensions "default"
+//     signingConfigs {
+//         debug {
+//             storeFile file('debug.keystore')
+//             storePassword 'android'
+//             keyAlias 'androiddebugkey'
+//             keyPassword 'android'
+//         }
+//     }
+//     productFlavors {
+//         production {
+//             applicationIdSuffix "extraapp.production"
+//             resValue "string", "build_config_package", "com.extraapp"
+//         }
+//         staging {
+//             applicationIdSuffix "extraapp.staging"
+//             resValue "string", "build_config_package", "com.extraapp"
+//         }
+//         development {
+//             applicationIdSuffix "extraapp.development"
+//             resValue "string", "build_config_package", "com.extraapp"
+//         }
+//     }
+//     buildTypes {
+//         signingConfig signingConfigs.debug
+//         matchingFallbacks = ['debug', 'release']
+//     }
+// }
+
 android {
     ndkVersion rootProject.ext.ndkVersion
 
     compileSdkVersion rootProject.ext.compileSdkVersion
+    flavorDimensions "default"
 
     namespace "com.extraapp"
     defaultConfig {
@@ -88,6 +131,20 @@ android {
             storePassword 'android'
             keyAlias 'androiddebugkey'
             keyPassword 'android'
+        }
+    }
+    productFlavors {
+        production {
+            applicationIdSuffix "production"
+            resValue "string", "build_config_package", "com.extraapp"
+        }
+        staging {
+            applicationIdSuffix "staging"
+            resValue "string", "build_config_package", "com.extraapp"
+        }
+        development {
+            applicationIdSuffix "development"
+            resValue "string", "build_config_package", "com.extraapp"
         }
     }
     buildTypes {
