Refreshed api urls for staging and prod

--- a/.env.prod
+++ b/.env.prod
@@ -1,3 +1,3 @@
 # Run in production environment
-API_URL="https://extra-app-79bab661df81.herokuapp.com"
+API_URL="https://personal-extra-app-prod-76912cbb783b.herokuapp.com/"
 ENV="prod"
