--- a/.env.prod
+++ b/.env.prod
@@ -1,3 +1,3 @@
 # Run in production environment
-API_URL="https://personal-extra-app-prod-76912cbb783b.herokuapp.com/"
+API_URL="https://personal-extra-app-prod-76912cbb783b.herokuapp.com"
 ENV="prod"
