--- a/.env.staging
+++ b/.env.staging
@@ -1,3 +1,3 @@
 # Run in staging environment
-API_URL="https://personal-extra-app-staging-9e1cfaa05b05.herokuapp.com/"
+API_URL="https://personal-extra-app-staging-9e1cfaa05b05.herokuapp.com"
 ENV="staging"
